Fixing the header to align

--- a/slab-data-warehouse/webroot/css/defaults.css
+++ b/slab-data-warehouse/webroot/css/defaults.css
@@ -2,3 +2,14 @@ html {
   font-family: "Open sans", Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
+body {
+  background-image: linear-gradient(linear-gradient(180deg, #F6FAFD 0%, #FFFFFF 19.4%));
+}
+
+nav > ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
